# fastapi-student-api

./: README.md
fastapiexercise/: .dockerignore  .env.docker  .env.example  .env.local  .gitignore  Dockerfile  config.example.toml  docker-compose.yaml  requirements.txt  taplo.toml
fastapiexercise/myproject/: cli.py  pyproject.toml
fastapiexercise/myproject/app/: database.py  myapi.py
