[project]
name = "fastapi-student-api"
version = "0.1.0"
description = "Öğrenci Yönetim API'si"
authors = [{ name = "Ahmet Tokgöz", email = "ahmet.tokgoz@tedu.edu.tr" }]
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.5",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
